# games_sales_scrapper

./: .env.template  .gitignore  Cargo.toml  README.md  Roadmap.md
.github/workflows/: build.yml  linux.yml  rust.yml  tests.yml  windows.yml
Recreation/game_sales_scrapper/: .env.template  .gitignore  README.md
Recreation/game_sales_scrapper/src/: lib.rs
Recreation/game_sales_scrapper/src/alerting/: email.rs
Recreation/game_sales_scrapper/src/file_ops/: json.rs  settings.rs  thresholds.rs
Recreation/game_sales_scrapper/src/stores/: steam.rs
crates/alerting/: Cargo.toml
crates/alerting/src/: email.rs
crates/constants/: Cargo.toml
crates/constants/src/: lib.rs
crates/constants/src/cli/: args.rs
crates/constants/src/operations/: properties.rs  settings.rs  thresholds.rs
crates/constants/src/properties/: location.rs  variables.rs
crates/file_ops/: Cargo.toml
crates/file_ops/src/: settings.rs  thresholds.rs
crates/file_types/src/: csv.rs
crates/properties/: Cargo.toml
crates/properties/src/: constants.rs  env_vars.rs  lib.rs
crates/stores/: Cargo.toml
crates/stores/src/: gog.rs  lib.rs  microsoft_store.rs  steam.rs
crates/stores/src/pc/: gog.rs  microsoft_store.rs  steam.rs
crates/structs/src/: data.rs  gog.rs  lib.rs  microsoft_store.rs  steam.rs
setup/: create_pipeline_env_file.sh  set_cron.sh
setup/actions/: create_env_file.ps1  create_env_file.sh  double_slash.rs
setup/pipeline/: create_env_file.ps1  create_env_file.sh
src/: lib.rs  main.rs
src/alerting/: email.rs
src/file_ops/: csv.rs  json.rs  settings.rs  structs.rs  thresholds.rs
src/stores/: gog.rs  microsoft_store.rs  steam.rs
src/structs/: data.rs  gog_response.rs  microsoft_store_response.rs  steam_response.rs
src/tests/: api_gog.rs  api_microsoft_store.rs  api_steam.rs  functional_tests.rs  gog_api_test.rs  helper.rs  microsoft_store_api_test.rs  settings_unit_tests.rs  steam_api_test.rs  threshold_unit_tests.rs
src/tests/api/: gog.rs  gog_pc.rs  microsoft_store.rs  microsoft_store_pc.rs  steam.rs  steam_pc.rs
src/tests/functional/: commands.rs
src/tests/unit/: passwords.rs  settings.rs  settings_ops.rs  threshold_ops.rs  thresholds.rs
