[workspace]
resolver = "3"
members = [
    "crates/alerting",
    "crates/file_types",
    "crates/file_ops",
    "crates/stores",
    "crates/structs",
    "crates/properties"
]

[workspace.package]
version = "0.1.0"
authors = ["Elinam Gbordzoe <elinamgbordzoe@gmail.com>"]
edition = "2024"

[workspace.dependencies]
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive", "cargo"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex = "1.11.1"
exitcode = "1.1.2"
lettre = "0.11.15"
csv = "1.3.1"
aes-gcm = "0.10.3"
rand = "0.9.2"
base64 = "0.22.1"
hex = "0.4.3"

[package]
name = "game_sales_scrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
alerting = { path = "crates/alerting" }
file_ops = { path = "crates/file_ops" }
file_types = { path = "crates/file_types" }
stores = { path = "crates/stores" }
structs = { path = "crates/structs" }
properties = { path = "crates/properties" }

# External crates
reqwest = { workspace = true, features = ["json", "blocking"] }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "cargo"] }
dotenv.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
regex.workspace = true
rand.workspace = true