[package]
name = "properties"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
file_types = { path = "../file_types" }
constants = { path = "../constants" }

# External crates
dotenv.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true