[package]
name = "stores"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
#Internal crates
structs = { path = "../structs" }
file_types = { path = "../file_types" }
properties = { path = "../properties" }

# External crates
reqwest = { workspace = true, features = ["json", "cookies"] }
serde_json.workspace = true
regex.workspace = true
exitcode.workspace = true
rand.workspace = true
chrono.workspace = true